# scorable-mcp

./: .env.example  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
demonstrations/: example_pydantic-ai.py
src/: __init__.py
src/scorable_mcp/: __init__.py  client.py  core.py  evaluator.py  fastmcp_adapter.py  judge.py  root_api_client.py  schema.py  settings.py  sse_server.py  stdio_server.py  tools.py
src/scorable_mcp/test/: __init__.py  conftest.py  test_client.py  test_evaluator.py  test_judge.py  test_root_client.py  test_schema.py  test_settings.py  test_sse_integration.py  test_sse_server.py  test_stdio_integration.py
